SDN::Weave: RBAC configuration

--- a/templates/default/weave-kube-daemonset.yaml.erb
+++ b/templates/default/weave-kube-daemonset.yaml.erb
@@ -81,6 +81,7 @@ spec:
           securityContext:
             privileged: true
       restartPolicy: Always
+      serviceAccountName: weave-net
       volumes:
         - name: weavedb
           emptyDir: {}
