WeaveDaemonset: reconcile label

--- a/templates/default/weave-kube-daemonset.yaml.erb
+++ b/templates/default/weave-kube-daemonset.yaml.erb
@@ -4,6 +4,7 @@ metadata:
   name: weave-net
   namespace: kube-system
   labels:
+    addonmanager.kubernetes.io/mode: Reconcile
     kubernetes.io/cluster-service: "true"
 spec:
   template:
