--- a/templates/default/weave-kube-daemonset.yaml.erb
+++ b/templates/default/weave-kube-daemonset.yaml.erb
@@ -122,4 +122,4 @@ spec:
           hostPath:
             path: /run/xtables.lock
   updateStrategy:
-    type: OnDelete
+    type: <%= node['kubernetes']['weave']['update_strategy']['type'] %>
