Weave: set .spec.updateStrategy.type by attribute

--- a/templates/default/weave-kube-daemonset.yaml.erb
+++ b/templates/default/weave-kube-daemonset.yaml.erb
@@ -112,4 +112,4 @@ spec:
           hostPath:
             path: /lib/modules
   updateStrategy:
-    type: OnDelete
+    type: <%= node['kubernetes']['weave']['update_strategy']['type'] %>
